add gmail and fix backfround

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <img src="images.jpeg" alt="Your Avatar" class="avatar">
             <h1 class="name">Kien Pro</h1>
             <p class="phone">Phone: 224-435-7133</p>
+            <p class="gmail">Gmail: vongkientran@gmail.com</p>
             <p class="slogan">No Pain No Gain</p>
         </header>
 
@@ -36,7 +37,7 @@
             <a href="https://discordapp.com/users/807514059506712576" class="d-block my-3" target="_blank">
                 <div class="link-item">
                     <img src="dis.png" alt="Discord" />
-                    <span>Discord  </span>
+                    <span>Discord</span>
                 </div>
             </a>
 
