add a comment for fun

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <button id="play-button" type="button" class="btn btn-success music-button" onclick="toggleAudio()">Turn on music</button>
 
             <!-- Add more links as needed -->
+             <!-- add a comment for fun -->
         </section>
     </div>
 
