add animations and change avatar

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body class="bg-light">
     <div class="container text-center my-5">
         <!-- Profile Header -->
-        <header>
-            <img src="images.jpeg" alt="Your Avatar" class="avatar">
-            <h1 class="name">Kien Pro</h1>
-            <p class="phone">Phone: 224-435-7133</p>
-            <p class="gmail">Gmail: vongkientran@gmail.com</p>
-            <p class="slogan">No Pain No Gain</p>
+        <header class="">
+            <img src="demon.gif" alt="Your Avatar" class="avatar">
+            <h1 class="name animate__animated animate__flipInY">Kien Pro</h1>
+            <p class="phone animate__animated animate__flipInY">Phone: 224-435-7133</p>
+            <p class="gmail animate__animated animate__flipInY">Gmail: vongkientran@gmail.com</p>
+            <p class="slogan animate__animated animate__flipInY">No Pain No Gain</p>
         </header>
 
         <!-- Links Section -->
-        <section class="my-4">
+        <section class="my-4  animate__animated animate__flipInX">
             <a href="https://www.facebook.com/vongkientran/" class="d-block my-3" target="_blank">
                 <div class="link-item">
                     <img src="facebook_icon.png" alt="facebook" />
@@ -30,22 +31,21 @@
                 </div>
             </a>
 
-            <a href="https://discordapp.com/users/807514059506712576" class="d-block my-3" target="_blank">
+            <a href="https://discordapp.com/users/807514059506712576" class="d-block my-3  " target="_blank">
                 <div class="link-item">
                     <img src="dis.png" alt="Discord" />
                     <span>Discord</span>
                 </div>
             </a>
 
-            <a href="https://www.instagram.com/kien.t14/" class="d-block my-3" target="_blank">
+            <a href="https://www.instagram.com/kien.t14/" class="d-block my-3  " target="_blank">
                 <div class="link-item">
                     <img src="insta.png" alt="Instagram" />
                     <span>Instagram</span>
                 </div>
             </a>
-            <button id="play-piano" type="button" class="btn btn-success music-button" onclick="toggleAudio1()">Turn on music</button>
-            <button id="play-rain" type="button" class="btn btn-success music-button" onclick="toggleAudio2()">Turn on rain sound</button>
-
+            <button id="play-piano" type="button" class="btn btn-success music-button  " onclick="toggleAudio1()">Turn on music</button>
+            <button id="play-rain" type="button" class="btn btn-success music-button  " onclick="toggleAudio2()">Turn on rain sound</button>
             <!-- Add more links as needed -->
              <!-- add a comment for fun -->
         </section>
