refactor mainJs, change a little style.css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </div>
     <audio id="audioPlayer1" loop>
-        <source src="Music.mp3" type="audio/mp3">
+        <source id="player" src="Music.mp3" type="audio/mp3">
     </audio>
     <audio id="audioPlayer2" loop>
         <source src="rain-sound.mp3" type="audio/mp3">
