--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body class="bg-light">
     <div class="container text-center my-5">
         <!-- Profile Header -->
-        <header class="">
+        <header >
             <img src="demon.gif" alt="Your Avatar" class="avatar">
             <h1 class="name animate__animated animate__flipInY">Kien Pro</h1>
             <p class="phone animate__animated animate__flipInY">Phone: 224-435-7133</p>
             <p class="gmail animate__animated animate__flipInY">Gmail: vongkientran@gmail.com</p>
-            <p class="slogan animate__animated animate__flipInY">No Pain No Gain</p>
+            <p class="slogan animate__animated animate__flipInY">Slogan: CẦN CÙ BÙ SIÊNG NĂNG</p>
         </header>
 
         <!-- Links Section -->
