change text in html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span>Instagram</span>
                 </div>
             </a>
-            <button id="play-piano" type="button" class="btn btn-success music-button  " onclick="toggleAudio1()">Turn on music</button>
+            <button id="play-piano" type="button" class="btn btn-success music-button  " onclick="toggleAudio1()">Turn on piano</button>
             <button id="play-rain" type="button" class="btn btn-success music-button  " onclick="toggleAudio2()">Turn on rain sound</button>
             <!-- Add more links as needed -->
              <!-- add a comment for fun -->
