--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container text-center my-5">
         <!-- Profile Header -->
         <header >
-            <img src="demon.gif" alt="Your Avatar" class="avatar">
+            <img src="images/demon.gif" alt="Your Avatar" class="avatar">
             <h1 class="name animate__animated animate__flipInY">Kien Pro</h1>
             <p class="phone animate__animated animate__flipInY">Phone: 224-435-7133</p>
             <p class="gmail animate__animated animate__flipInY">Gmail: vongkientran@gmail.com</p>
@@ -26,21 +26,21 @@
         <section class="my-4  animate__animated animate__flipInX">
             <a href="https://www.facebook.com/vongkientran/" class="d-block my-3" target="_blank">
                 <div class="link-item">
-                    <img src="facebook_icon.png" alt="facebook" />
+                    <img src="images/facebook_icon.png" alt="facebook" />
                     <span>Facebook</span>
                 </div>
             </a>
 
             <a href="https://discordapp.com/users/807514059506712576" class="d-block my-3  " target="_blank">
                 <div class="link-item">
-                    <img src="dis.png" alt="Discord" />
+                    <img src="images/dis.png" alt="Discord" />
                     <span>Discord</span>
                 </div>
             </a>
 
             <a href="https://www.instagram.com/kien.t14/" class="d-block my-3  " target="_blank">
                 <div class="link-item">
-                    <img src="insta.png" alt="Instagram" />
+                    <img src="images/insta.png" alt="Instagram" />
                     <span>Instagram</span>
                 </div>
             </a>
@@ -51,10 +51,10 @@
         </section>
     </div>
     <audio id="audioPlayer1" loop>
-        <source id="player" src="Music.mp3" type="audio/mp3">
+        <source id="player" src="sounds/Music.mp3" type="audio/mp3">
     </audio>
     <audio id="audioPlayer2" loop>
-        <source src="rain-sound.mp3" type="audio/mp3">
+        <source src="sounds/rain-sound.mp3" type="audio/mp3">
     </audio>
 
     <!-- Bootstrap JS and dependencies -->
