Add a background changing button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body class="bg-light">
+   
     <div class="container text-center my-5">
         <!-- Profile Header -->
         <header >
@@ -49,6 +50,10 @@
             <!-- Add more links as needed -->
              <!-- add a comment for fun -->
         </section>
+        <div class="bg-box"><span>Change background: </span>
+        <input type="checkbox" name="" id="bg-button">
+        <label for="bg-button" class="check-bg-button"  onclick="changeBackground()"></label>
+    </div>
     </div>
     <audio id="audioPlayer1" loop>
         <source id="player" src="sounds/Music.mp3" type="audio/mp3">
@@ -56,6 +61,9 @@
     <audio id="audioPlayer2" loop>
         <source src="sounds/rain-sound.mp3" type="audio/mp3">
     </audio>
+    
+        
+  
     <!-- test source control on visual studio -->
     <!-- Bootstrap JS and dependencies -->
   
